Cambios 125 finales estable

--- a/VelsatBackendAPI/appsettings.json
+++ b/VelsatBackendAPI/appsettings.json
@@ -13,8 +13,8 @@
 
   "ConnectionStrings": {
 
-    "DefaultConnection": "server=66.240.210.125;port=3306;database=gts;uid=velsatuser;password=velsatAPI23;Pooling=true;Allow User Variables=True;",
+    "DefaultConnection": "server=66.240.210.125;port=3306;database=gts;uid=velsatuser;password=velsatAPI23;Pooling=true;Allow User Variables=True;MinimumPoolSize=5;MaximumPoolSize=500;ConnectionTimeout=59;",
 
-    "SecondConnection": "server=66.240.210.125;port=3306;database=dbv16_01;uid=velsatuser;password=velsatAPI23;Pooling=true;Allow User Variables=True;"
+    "SecondConnection": "server=66.240.210.125;port=3306;database=dbv16_01;uid=velsatuser;password=velsatAPI23;Pooling=true;Allow User Variables=True;MinimumPoolSize=5;MaximumPoolSize=500;ConnectionTimeout=59"
   }
 }
